welcome.lessons.welcome.array.array667.Array667.scala.error
array667:7: error: ';' expected but ')' found.
			x=x+1)
                             ^