welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
	var x:Int = 0
	for (i<- 0 to nums.length -1){
		if (nums(i)==6){
		x=x+1
			if (nums(i+1)==6)
			x=x+1)
			if (nums (i+1)==7)
			x=x+1
		}
		
	}
	return x
}
